--- a/index.html
+++ b/index.html
@@ -30,12 +30,16 @@
             <p class="lead__subtitle">
               Настоящая страна не в выпусках новостей, а здесь.
             </p>
-            <img
-              src="./images/lead-polka.jpg"
-              alt="Изображение купе"
-              class="lead__image"
-            >
-            <p class="lead__caption">ваша полка — верхняя</p>
+            <figure class="lead__figure-block">
+              <img
+                src="./images/lead-polka.jpg"
+                alt="Изображение купе"
+                class="lead__image"
+              >
+              <figcaption class="lead__caption">
+                ваша полка — верхняя
+              </figcaption>
+            </figure>
           </section>
           <section class="intro">
             <h2 class="intro__title">Чего мы там не видели?</h2>
@@ -83,66 +87,92 @@
             </ul>
           </section>
           <section class="photo-grid">
-            <img
-              src="./images/photo-grid-train.jpg"
-              alt="Окно поезда"
-              class="photo-grid__item"
-            >
-            <img
-              src="./images/photo-grid-atharva-tulsi.jpg"
-              alt="Горы"
-              class="photo-grid__item"
-            >
-            <img
-              src="./images/photo-grid-tuman.jpg"
-              alt="Собака в тумане"
-              class="photo-grid__item"
-            >
-            <img
-              src="./images/photo-grid-sochi.jpg"
-              alt="Лес в тумане"
-              class="photo-grid__item"
-            >
-            <img
-              src="./images/photo-grid-arisa.jpg"
-              alt="Колесо машины на льду"
-              class="photo-grid__item"
-            >
-            <img
-              src="./images/photo-grid-baikal.jpg"
-              alt="Берег озера"
-              class="photo-grid__item"
-            >
-            <img
-              src="./images/photo-grid-elbrus.jpg"
-              alt="Эльбрус"
-              class="photo-grid__item"
-            >
-            <img
-              src="./images/photo-grid-kondratiev.jpg"
-              alt="Знак пешеходного перехода"
-              class="photo-grid__item"
-            >
-            <img
-              src="./images/photo-grid-kamchatka-1.jpg"
-              alt="Источники Камчатки"
-              class="photo-grid__item"
-            >
-            <img
-              src="./images/photo-grid-kamchatka-2.jpg"
-              alt="Вулкан Камчатки"
-              class="photo-grid__item"
-            >
-            <img
-              src="./images/photo-grid-baikal-2.jpg"
-              alt="Высокий берег Байкала"
-              class="photo-grid__item"
-            >
-            <img
-              src="./images/photo-grid-ergaki.jpg"
-              alt="Горы в густом тумане"
-              class="photo-grid__item"
-            >
+            <ul class="photo-grid__list">
+              <li class="photo-grid__list-element">
+                <img
+                  src="./images/photo-grid-train.jpg"
+                  alt="Окно поезда"
+                  class="photo-grid__item"
+                >
+              </li>
+              <li class="photo-grid__list-element">
+                <img
+                  src="./images/photo-grid-atharva-tulsi.jpg"
+                  alt="Горы"
+                  class="photo-grid__item"
+                >
+              </li>
+              <li class="photo-grid__list-element">
+                <img
+                  src="./images/photo-grid-tuman.jpg"
+                  alt="Собака в тумане"
+                  class="photo-grid__item"
+                >
+              </li>
+              <li class="photo-grid__list-element">
+                <img
+                  src="./images/photo-grid-sochi.jpg"
+                  alt="Лес в тумане"
+                  class="photo-grid__item"
+                >
+              </li>
+              <li class="photo-grid__list-element">
+                <img
+                  src="./images/photo-grid-arisa.jpg"
+                  alt="Колесо машины на льду"
+                  class="photo-grid__item"
+                >
+              </li>
+              <li class="photo-grid__list-element">
+                <img
+                  src="./images/photo-grid-baikal.jpg"
+                  alt="Берег озера"
+                  class="photo-grid__item"
+                >
+              </li>
+              <li class="photo-grid__list-element">
+                <img
+                  src="./images/photo-grid-elbrus.jpg"
+                  alt="Эльбрус"
+                  class="photo-grid__item"
+                >
+              </li>
+              <li class="photo-grid__list-element">
+                <img
+                  src="./images/photo-grid-kondratiev.jpg"
+                  alt="Знак пешеходного перехода"
+                  class="photo-grid__item"
+                >
+              </li>
+              <li class="photo-grid__list-element">
+                <img
+                  src="./images/photo-grid-kamchatka-1.jpg"
+                  alt="Источники Камчатки"
+                  class="photo-grid__item"
+                >
+              </li>
+              <li class="photo-grid__list-element">
+                <img
+                  src="./images/photo-grid-kamchatka-2.jpg"
+                  alt="Вулкан Камчатки"
+                  class="photo-grid__item"
+                >
+              </li>
+              <li class="photo-grid__list-element">
+                <img
+                  src="./images/photo-grid-baikal-2.jpg"
+                  alt="Высокий берег Байкала"
+                  class="photo-grid__item"
+                >
+              </li>
+              <li class="photo-grid__list-element">
+                <img
+                  src="./images/photo-grid-ergaki.jpg"
+                  alt="Горы в густом тумане"
+                  class="photo-grid__item"
+                >
+              </li>
+            </ul>
           </section>
           <section class="places">
             <div class="places__place">
@@ -168,7 +198,7 @@
                 </p>
                 <p class="places__paragraphar">
                   На&nbsp;этом Калининградская область не&nbsp;заканчивается.
-                  Для путешественника и&nbsp;исследователя там&nbsp;же
+                  Для&nbsp;путешественника и&nbsp;исследователя там&nbsp;же
                   по&nbsp;соседству&nbsp;&mdash; самая западная точка России,
                   Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи
                   небольших приморских городов. Атмосфера здешних мест исключает
@@ -194,18 +224,18 @@
               </div>
               <div class="places__text">
                 <p class="places__paragraphar">
-                  Почти весь полуостров находится за Полярным кругом. Саамская
-                  тундра, от которой на юг — тайга, а на север — Ледовитый
+                  Почти весь полуостров находится за&nbsp;Полярным кругом. Саамская
+                  тундра, от&nbsp;которой на&nbsp;юг&nbsp;&mdash; тайга, а&nbsp;на&nbsp;север&nbsp;&mdash; Ледовитый
                   океан, прикидывающийся Баренцевым морем.
                 </p>
                 <p class="places__paragraphar">
-                  Возможно, вы смотрели Звягинцева и даже слышали историю
-                  арктического фестиваля в Териберке. Возможно, слово «Хибины»
-                  не осталось под снегом школьных воспоминаний об уроках
-                  географии. Возможно, вы не интересовались пронизывающей земную
-                  кору сверхглубокой скважиной, а от апатитов вас давно
-                  накрывает апатия. Но ваша мечта увидеть северное сияние
-                  начинает сбываться с билетом в Мурманск.
+                  Возможно, вы&nbsp;смотрели Звягинцева и&nbsp;даже слышали историю
+                  арктического&nbsp;фестиваляв Териберке. Возможно, слово &laquo;Хибины&raquo;
+                  не&nbsp;осталось под снегом школьных воспоминаний об&nbsp;уроках
+                  географии.&nbsp;Возможно,&nbsp;вы&nbsp;не интересовались пронизывающей земную
+                  кору сверхглубокой скважиной, а&nbsp;от&nbsp;апатитов вас давно
+                  накрывает апатия. Но&nbsp;ваша мечта увидеть северное сияние
+                  начинает сбываться с&nbsp;билетом в&nbsp;Мурманск.
                 </p>
               </div>
             </div>
@@ -226,17 +256,17 @@
               </div>
               <div class="places__text">
                 <p class="places__paragraphar">
-                  Алтай — одно из красивейших мест в России. В первую очередь
-                  из-за гор: если ехать вдоль хребта, вы увидите склоны,
-                  усыпанные соснами, горные реки и озёра. А если вы откроете в
-                  автомобиле окна, сможете познакомиться с невидимым чудом
-                  здешних мест — горным воздухом.
+                  Алтай&nbsp;&mdash; одно из&nbsp;красивейших мест в&nbsp;России. В&nbsp;первую очередь
+                  из-за гор: если ехать вдоль хребта, вы&nbsp;увидите склоны,
+                  усыпанные соснами, горные реки и&nbsp;озёра. А&nbsp;если вы&nbsp;откроете в
+                  автомобиле окна, сможете познакомиться с&nbsp;невидимым чудом
+                  здешних мест&nbsp;&mdash; горным воздухом.
                 </p>
                 <p class="places__paragraphar">
-                  Климат на Алтае умеренный, поэтому ехать сюда лучше всего
-                  летом. Так вы увидите всё разнообразие местной флоры и фауны.
-                  По лесам Алтая бродят лоси, над хребтами летают орлы, а на
-                  равнинах пасутся косули. И знаменитые манулы — тоже обитатели
+                  Климат на&nbsp;Алтае умеренный, поэтому ехать сюда лучше всего
+                  летом. Так вы&nbsp;увидите всё разнообразие местной флоры и&nbsp;фауны.
+                  По&nbsp;лесам Алтая бродят лоси, над хребтами летают орлы, а&nbsp;на
+                  равнинах пасутся косули. И&nbsp;знаменитые манулы&nbsp;&mdash; тоже обитатели
                   Алтайского края.
                 </p>
               </div>
@@ -256,17 +286,16 @@
               </div>
               <div class="places__text">
                 <p class="places__paragraphar">
-                  Всем известен Байкал как крупнейшее озеро в мире. Многие также
-                  знают, что это самый большой источник пресной воды и одно из
-                  красивейших мест в России.
+                  Всем известен Байкал как крупнейшее озеро в&nbsp;мире. Многие также
+                  знают, что это самый большой источник пресной воды и&nbsp;одно из
+                  красивейших мест в&nbsp;России.
                 </p>
                 <p class="places__paragraphar">
-                  Конечно, это всё так. Но Байкал ещё идеальное место
-                  для соревнований по скийорингу. Это такой вид спорта, когда
-                  лыжник привязывает себя к мотоциклу, и тандем старается
-                  развить как можно бóльшую скорость на льду. В марте 2019 года
-                  на фестивале «Байкальская миля» был поставлен мировой рекорд —
-                  197.011 км/ч.
+                  Конечно, это всё так. Но&nbsp;Байкал ещё идеальное место
+                  для соревнований по&nbsp;скийорингу. Это такой вид спорта, когда
+                  лыжник привязывает себя к&nbsp;мотоциклу, тандем старается
+                  развить как&nbsp;можно б&oacute;льшую скорость на&nbsp;льду. В&nbsp;марте 2019 года
+                  на&nbsp;фестивале Байкальская миля&quot; был поставлен мировой рекорд 197.011&nbsp;км/ч.
                 </p>
               </div>
             </div>
@@ -285,58 +314,64 @@
               </div>
               <div class="places__text">
                 <p class="places__paragraphar">
-                  Сибирь заканчивается не&nbsp;на&nbsp;Урале, а&nbsp;в&nbsp;Карелии: образующая
-                  тайгу сибирская лиственница не&nbsp;растёт западнее Водлозера. Зато
-                  здесь она вымахивает на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских
-                  национальных парков из-за непроходимых болот никогда не&nbsp;знали
-                  топора. Некоторым соснам уже больше чем полтысячелетия.
-                  Прикоснитесь к&nbsp;живому существу, видевшему солнце раньше, чем
-                  увидал его Иван Грозный. В&nbsp;девственном лесу на&nbsp;сотню
-                  километров не&nbsp;встретишь тропы. А&nbsp;на&nbsp;редких тропинках деревья в
-                  паре метров от&nbsp;земли помечены медвежьими когтями. Чтобы все
-                  знали, кто тут хозяин.
+                  Сибирь заканчивается не&nbsp;на&nbsp;Урале,
+                  а&nbsp;в&nbsp;Карелии: образующая тайгу сибирская лиственница
+                  не&nbsp;растёт западнее Водлозера. Зато здесь она вымахивает
+                  на&nbsp;30&nbsp;метров&nbsp;&mdash; леса карельских
+                  национальных парков из-за непроходимых болот никогда
+                  не&nbsp;знали топора. Некоторым соснам уже больше чем
+                  полтысячелетия. Прикоснитесь к&nbsp;живому существу, видевшему
+                  солнце раньше, чем увидал его Иван Грозный. В&nbsp;девственном
+                  лесу на&nbsp;сотню километров не&nbsp;встретишь тропы.
+                  А&nbsp;на&nbsp;редких тропинках деревья в паре метров
+                  от&nbsp;земли помечены медвежьими когтями. Чтобы все знали,
+                  кто тут хозяин.
                 </p>
               </div>
             </div>
           </section>
           <section class="cover">
             <a
+              target="_blank"
               href="https://stampsy.com/na-elektrichkakh-do-baikala"
               class="cover__link"
             >
-              <h2 class="cover__title">До Байкала «на собаках»</h2>
+              <h2 class="cover__title">До Байкала «на&nbsp;собаках»</h2>
               <p class="cover__subtitle">
                 По мотивам учебной темы о Транссибе — путешествие от столицы до
-                Байкала на электричках.
-              </p>
+                Байкала на электричках.</p>
             </a>
           </section>
         </main>
         <footer class="footer">
-          <ul class="footer__links">
-            <li>
-              <a href="https://yandex.ru/maps" class="footer__link">Карты</a>
-            </li>
-            <li>
-              <a href="https://yandex.ru/pogoda" class="footer__link">Погода</a>
-            </li>
-            <li>
-              <a href="https://rasp.yandex.ru" class="footer__link"
-                >Расписание</a
-              >
-            </li>
-            <li>
-              <a href="https://calendar.yandex.ru" class="footer__link"
-                >Календарь</a
-              >
-            </li>
-            <li>
-              <a href="https://travel.yandex.ru" class="footer__link"
-                >Путешествия</a
-              >
-            </li>
-          </ul>
-          <p class="footer__copyright">&#64; 2023. Гуськов Алексей</p>
+          <nav>
+            <ul class="footer__links">
+              <li>
+                <a target="_blank" href="https://yandex.ru/maps" class="footer__link">Карты</a>
+              </li>
+              <li>
+                <a target="_blank" href="https://yandex.ru/pogoda" class="footer__link"
+                  >Погода</a
+                >
+              </li>
+              <li>
+                <a target="_blank" href="https://rasp.yandex.ru" class="footer__link"
+                  >Расписание</a
+                >
+              </li>
+              <li>
+                <a target="_blank" href="https://calendar.yandex.ru" class="footer__link"
+                  >Календарь</a
+                >
+              </li>
+              <li>
+                <a target="_blank" href="https://travel.yandex.ru" class="footer__link"
+                  >Путешествия</a
+                >
+              </li>
+            </ul>
+          </nav>
+          <p class="footer__copyright">&copy; 2023. Гуськов Алексей</p>
         </footer>
       </div>
     </div>
